# bevy_ios_impact

./: CHANGELOG.md  Cargo.toml  README.md  justfile
ios_impact/: Cargo.toml  README.md
ios_impact/src/: lib.rs
src/: impact_generator.rs  lib.rs  plugin.rs  resource.rs  ui_impact_generator.rs
src/inner/: feedback_style.rs  impact_generators.rs  mod.rs  shared_generators.rs
