[package]
name = "bevy_ios_impact"
version = "0.1.0"
license = "MIT OR Apache-2.0"
description = "allows using ios ImpactFeedback API to generate haptic device vibrations"
authors = ["rusticorn <mail@rusticorn.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/extrawurst/gitui"
repository = "https://github.com/extrawurst/gitui"
keywords = ["gamedev", "bevy", "ios", "mobile"]
categories = ["game-engines"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
objc2 = "0.4.1"
bevy = { version = "0.13", default-features = false }

[dependencies.icrate]
version = "0.0.4"
features = ["Foundation"]
