[package]
name = "bevy_ios_impact"
version = "0.1.1"
license = "MIT OR Apache-2.0"
description = "allows using ios ImpactFeedback API to generate haptic device vibrations"
authors = ["rusticorn <mail@rusticorn.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/rustunit/bevy_ios_impact"
repository = "https://github.com/rustunit/bevy_ios_impact"
documentation = "https://docs.rs/bevy_ios_impact"
keywords = ["gamedev", "bevy", "ios", "mobile"]
categories = ["game-engines"]

[workspace]
members = ["ios_impact"]

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"

[dependencies]
bevy = { version = "0.13", default-features = false }
ios_impact = { version = "0.1", path = "./ios_impact" }
objc2 = "0.4.1"
