[package]
name = "ios_impact"
version = "0.1.0"
license = "MIT OR Apache-2.0"
description = "objc2 abstractions over ios UIKit UIFeedbackGenerator"
authors = ["rusticorn <mail@rusticorn.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/rustunit/bevy_ios_impact"
repository = "https://github.com/rustunit/bevy_ios_impact"
keywords = ["gamedev", "bevy", "ios", "mobile"]

[dependencies]
icrate = { version = "0.0.4", features = ["Foundation"] }
objc2 = "0.4.1"
