[package]
name = "ios_impact"
version = "0.1.1"
license = "MIT OR Apache-2.0"
description = "objc2 abstractions over ios UIKit UIFeedbackGenerator"
authors = ["rusticorn <mail@rusticorn.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/rustunit/bevy_ios_impact"
repository = "https://github.com/rustunit/bevy_ios_impact"
documentation = "https://docs.rs/ios_impact"
keywords = ["objective-c", "mobile", "ios", "objc"]
categories = ["api-bindings", "os::macos-apis"]

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"

[dependencies]
icrate = { version = "0.0.4", features = ["Foundation"] }
objc2 = "0.4.1"
